--- a/styles/main.css
+++ b/styles/main.css
@@ -15,15 +15,11 @@
 /* SIDEBAR */
 
 .sidebar {
-  background-image: url("../assets/images/greenery.jpg");
-  background-size: cover;
-  background-position: center;
-  background-repeat: no-repeat;
+  background: url(../assets/images/greenery.jpg) center/cover no-repeat;
   height: 100vh;
   width: max(35vw, 400px);
   color: white;
   position: relative;
-
   display: flex;
   align-items: end;
   justify-content: center;
