--- a/styles/main.css
+++ b/styles/main.css
@@ -104,7 +104,7 @@ form {
 }
 
 .form-actions {
-  padding-top: 40px;
+  padding-top: 30px;
 }
 
 .form-input-container {
@@ -146,4 +146,22 @@ form {
   display: flex;
   justify-content: flex-start;
   gap: 5rem;
+}
+
+/* FORM ACTIONS */
+
+.form-actions button {
+  background-color: var(--green-accent);
+  color: white;
+  padding: 0.8rem 3rem;
+  border: none;
+  border-radius: 10px;
+  box-shadow: rgba(0, 0, 0, 0.15) 0px 3px 3px 0px;
+  margin-bottom: 2rem;
+}
+
+.form-actions a {
+  color: var(--green-accent);
+  text-decoration: none;
+  font-weight: 600;
 }
