--- a/styles/main.css
+++ b/styles/main.css
@@ -92,7 +92,7 @@ form {
 .form-actions {
   flex: 3.5;
   background-color: var(--form-background-color);
-  padding-left: 3rem;
+  padding: 0 3rem;
 }
 
 .form-container header {
